Fix navbar vertical alignment to visually center link text
Shift 2px from padding-top to padding-bottom to compensate for the
font's ascender/descender asymmetry, making the cap height appear
visually centered in the navbar rather than sitting slightly low.

--- a/src/backend/web/static/css/less_css/less/tba/tba_navbar.less
+++ b/src/backend/web/static/css/less_css/less/tba/tba_navbar.less
@@ -21,8 +21,8 @@
 .tba-navbar-nav {
   margin: 0;
   > li > a {
-    padding-top: ((@navbar-height - @line-height-computed) / 2);
-    padding-bottom: ((@navbar-height - @line-height-computed) / 2);
+    padding-top: ((@navbar-height - @line-height-computed) / 2 - 2);
+    padding-bottom: ((@navbar-height - @line-height-computed) / 2 + 2);
 
     padding-left: 5px;
     padding-right: 5px;
